notebook of work

--- a/classification/arecanut_quality_classification.ipynb
+++ b/classification/arecanut_quality_classification.ipynb
@@ -2,21 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "dTrMxcIVboFT"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4080, 3072)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import cv2"
+    "import cv2\n",
+    "\n",
+    "exampleimg=cv2.imread(\"example-image.jpg\")\n",
+    "cvimage=cv2.cvtColor(exampleimg,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "cv2.namedWindow(\"window\", cv2.WINDOW_NORMAL)\n",
+    "cv2.resizeWindow(\"window\", 400,512 )\n",
+    "\n",
+    "print(cvimage.shape)\n",
+    "\n",
+    "cv2.imshow(\"window\",cvimage)\n",
+    "cv2.waitKey(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "bHZXbEVfcj1x"
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -30,7 +64,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
