--- a/classification/arecanut_quality_classification.ipynb
+++ b/classification/arecanut_quality_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "dTrMxcIVboFT"
    },
@@ -20,7 +20,7 @@
        "-1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,17 +42,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4080, 3072, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cvimage2=cv2.imread(\"example-image.jpg\")\n",
+    "cvimage2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 69,  84,  93],\n",
+       "        [ 69,  84,  93],\n",
+       "        [ 69,  84,  93],\n",
+       "        ...,\n",
+       "        [ 83,  82,  84],\n",
+       "        [ 84,  83,  85],\n",
+       "        [ 84,  83,  85]],\n",
+       "\n",
+       "       [[ 69,  84,  93],\n",
+       "        [ 68,  83,  92],\n",
+       "        [ 68,  83,  92],\n",
+       "        ...,\n",
+       "        [ 83,  82,  84],\n",
+       "        [ 84,  83,  85],\n",
+       "        [ 85,  84,  86]],\n",
+       "\n",
+       "       [[ 69,  84,  93],\n",
+       "        [ 68,  83,  92],\n",
+       "        [ 68,  83,  92],\n",
+       "        ...,\n",
+       "        [ 83,  82,  84],\n",
+       "        [ 84,  83,  85],\n",
+       "        [ 85,  84,  86]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 54,  59,  62],\n",
+       "        [ 55,  60,  63],\n",
+       "        [ 57,  62,  65],\n",
+       "        ...,\n",
+       "        [ 86,  98, 104],\n",
+       "        [ 87,  99, 105],\n",
+       "        [ 87,  99, 105]],\n",
+       "\n",
+       "       [[ 55,  60,  63],\n",
+       "        [ 56,  61,  64],\n",
+       "        [ 57,  62,  65],\n",
+       "        ...,\n",
+       "        [ 86,  96, 103],\n",
+       "        [ 86,  98, 104],\n",
+       "        [ 87,  99, 105]],\n",
+       "\n",
+       "       [[ 55,  60,  63],\n",
+       "        [ 56,  61,  64],\n",
+       "        [ 58,  63,  66],\n",
+       "        ...,\n",
+       "        [ 86,  96, 103],\n",
+       "        [ 86,  98, 104],\n",
+       "        [ 86,  98, 104]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cvimage2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n"
+   ]
   }
  ],
  "metadata": {
