--- a/image-preprocessing/areca-nut-images-prerpocessing.ipynb
+++ b/image-preprocessing/areca-nut-images-prerpocessing.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "dTrMxcIVboFT"
    },
@@ -26,10 +37,6 @@
     }
    ],
    "source": [
-    "import cv2\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "exampleimg=cv2.imread(\"example-image.jpg\")\n",
     "cvimage=cv2.cvtColor(exampleimg,cv2.COLOR_BGR2GRAY)\n",
     "\n",
@@ -472,6 +479,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "img=cv2.imread(\"example-image.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -480,7 +496,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -493,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
