added about ROI

--- a/image-preprocessing/trial-areca-nut-images-prerpocessing.ipynb
+++ b/image-preprocessing/trial-areca-nut-images-prerpocessing.ipynb
@@ -616,10 +616,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "If the areca nut's position is fairly consistent but varies slightly, you might instead consider using Cropping or Region of Interest (ROI) techniques to focus directly on the nut itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image ROI\n",
+    "\n",
+    "sorce: https://docs.opencv.org/4.x/d3/df2/tutorial_py_basic_ops.html\n",
+    "\n",
+    "Sometimes, you will have to play with certain regions of images. For eye detection in images, first face detection is done over the entire image. When a face is obtained, we select the face region alone and search for eyes inside it instead of searching the whole image. It improves accuracy (because eyes are always on faces :D ) and performance (because we search in a small area).\n",
+    "\n",
+    "ROI is again obtained using Numpy indexing. Here I am selecting the ball and copying it to another region in the image:\n",
+    "\n",
+    ">>> ball = img[280:340, 330:390]\n",
+    ">>> img[273:333, 100:160] = ball"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
