added relevant links for image segmentation

--- a/image-preprocessing/trial-areca-nut-images-prerpocessing.ipynb
+++ b/image-preprocessing/trial-areca-nut-images-prerpocessing.ipynb
@@ -641,6 +641,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Getting Started with Mask R-CNN for Instance Segmentation\n",
+    "https://www.mathworks.com/help/vision/ug/getting-started-with-mask-r-cnn-for-instance-segmentation.html\n",
+    "\n",
+    "Segmentation: U-Net, Mask R-CNN, and Medical Applications\n",
+    "https://glassboxmedicine.com/2020/01/21/segmentation-u-net-mask-r-cnn-and-medical-applications/\n",
+    "\n",
+    "U-Net Architecture For Image Segmentation\n",
+    "https://www.digitalocean.com/community/tutorials/unet-architecture-image-segmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
