--- a/image-preprocessing/trial-areca-nut-images-prerpocessing.ipynb
+++ b/image-preprocessing/trial-areca-nut-images-prerpocessing.ipynb
@@ -642,13 +642,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Getting Started with Mask R-CNN for Instance Segmentation\n",
+    "## image segmentation for arecanut\n",
+    "\n",
+    "Using segmentation techniques (like U-Net or Mask R-CNN) to isolate the areca nut from the background can enhance the quality of your dataset.\n",
+    "\n",
+    "1. Getting Started with Mask R-CNN for Instance Segmentation\n",
     "https://www.mathworks.com/help/vision/ug/getting-started-with-mask-r-cnn-for-instance-segmentation.html\n",
     "\n",
-    "Segmentation: U-Net, Mask R-CNN, and Medical Applications\n",
+    "2. Segmentation: U-Net, Mask R-CNN, and Medical Applications\n",
     "https://glassboxmedicine.com/2020/01/21/segmentation-u-net-mask-r-cnn-and-medical-applications/\n",
     "\n",
-    "U-Net Architecture For Image Segmentation\n",
+    "3. U-Net Architecture For Image Segmentation\n",
     "https://www.digitalocean.com/community/tutorials/unet-architecture-image-segmentation"
    ]
   },
