dry ran the function preprocess_image

--- a/image-preprocessing/areca_nut_image_preprocessing.ipynb
+++ b/image-preprocessing/areca_nut_image_preprocessing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "id": "lW6PIRfgFzbl"
    },
@@ -50,10 +50,11 @@
    "source": [
     "import cv2\n",
     "import os\n",
-    "import fireducks.pandas as pd\n",
+    "# import fireducks.pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from google.colab import files"
+    "# from google.colab import files"
    ]
   },
   {
@@ -3963,20 +3964,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {
     "id": "dX_vDmpx9i3-"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing complete. Images saved to: preprocessed\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess_images(input_folder, output_folder):\n",
-    "    \"\"\"\n",
-    "    Resizes, converts to grayscale, and normalizes images in a folder.\n",
-    "\n",
-    "    Args:\n",
-    "        input_folder: Path to the folder containing the input images.\n",
-    "        output_folder: Path to the folder where preprocessed images will be saved.\n",
-    "    \"\"\"\n",
+    "    \n",
     "    os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
     "    for filename in os.listdir(input_folder):\n",
@@ -3994,25 +3997,32 @@
     "\n",
     "            gray_img = cv2.cvtColor(resized_img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "            # source for CLAHE (Contrast Limited Adaptive Histogram Equalization): https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html\n",
+    "                                                                         # source for CLAHE (Contrast Limited Adaptive Histogram Equalization): https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html\n",
     "\n",
     "            clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8, 8))\n",
-    "            clahe_img = clahe.apply(resized_img)\n",
+    "            clahe_img = clahe.apply(gray_img)\n",
     "\n",
-    "            # blurred_img = cv2.GaussianBlur(gray_img, (9, 9), 0)\n",
+    "                                                                            # blurred_img = cv2.GaussianBlur(gray_img, (9, 9), 0)\n",
     "\n",
-    "            # source for sharpening images: https://medium.com/@sajjadhadi/mastering-opencv2-in-15-days-day-3-image-filtering-and-enhancement-ae1095f09aa5\n",
+    "                                                                            # source for sharpening images: https://medium.com/@sajjadhadi/mastering-opencv2-in-15-days-day-3-image-filtering-and-enhancement-ae1095f09aa5\n",
     "\n",
     "            sharpening_kernel = np.array([[-1, -1, -1],\n",
     "                             [-1, 9, -1],\n",
     "                             [-1, -1, -1]])\n",
     "            sharpened_image = cv2.filter2D(clahe_img, -1, sharpening_kernel)\n",
     "\n",
-    "            normalized_img = sharpened_image/255.0\n",
+    "            normalized_img = cv2.normalize(sharpened_image, None, 0, 255, cv2.NORM_MINMAX)\n",
+    "            normalized_img = np.uint8(normalized_img)\n",
+    "\n",
     "\n",
     "            cv2.imwrite(output_path, normalized_img)\n",
     "\n",
-    "    print(\"Preprocessing complete. Images saved to:\", output_folder)"
+    "    print(\"Preprocessing complete. Images saved to:\", output_folder)\n",
+    "\n",
+    "output_folder='preprocessed'\n",
+    "input_folder='input'\n",
+    "\n",
+    "preprocess_images(input_folder,output_folder)"
    ]
   },
   {
