added improved canny edge detection

--- a/image-preprocessing/areca_nut_image_preprocessing.ipynb
+++ b/image-preprocessing/areca_nut_image_preprocessing.ipynb
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1986,9 +1986,8 @@
     "            resized_img = cv2.resize(img, (2048, 2048))\n",
     "\n",
     "            gray_img = cv2.cvtColor(resized_img, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "                                                                            # source for CLAHE (Contrast Limited Adaptive Histogram Equalization): https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html\n",
-    "\n",
+    "            blurred_img = cv2.GaussianBlur(gray_img, (5, 5), sigmaX=1.0, sigmaY=1.0)\n",
+    "            \n",
     "            clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8, 8))\n",
     "            clahe_img = clahe.apply(gray_img)\n",
     "\n",
@@ -2000,8 +1999,17 @@
     "                             [-1, 9, -1],\n",
     "                             [-1, -1, -1]])\n",
     "            sharpened_image = cv2.filter2D(clahe_img, -1, sharpening_kernel)\n",
+    "            \n",
+    "            sobelx = cv2.Sobel(blurred_img, cv2.CV_64F, 1, 0, ksize=3)  # Gradient in X direction\n",
+    "            sobely = cv2.Sobel(blurred_img, cv2.CV_64F, 0, 1, ksize=3)  # Gradient in Y direction\n",
+    "            \n",
+    "            gradient_magnitude = np.hypot(sobelx, sobely)\n",
+    "            gradient_magnitude = np.uint8(255 * gradient_magnitude / np.max(gradient_magnitude))\n",
+    "            \n",
     "\n",
-    "            normalized_img = cv2.normalize(sharpened_image, None, 0, 255, cv2.NORM_MINMAX)\n",
+    "                                                                            # source for CLAHE (Contrast Limited Adaptive Histogram Equalization): https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html\n",
+    "\n",
+    "            normalized_img = cv2.normalize(gradient_magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
     "            normalized_img = np.uint8(normalized_img)\n",
     "\n",
     "\n",
