ran function to preprocess image and preprocessed image

--- a/image-preprocessing/areca_nut_image_preprocessing.ipynb
+++ b/image-preprocessing/areca_nut_image_preprocessing.ipynb
@@ -50,10 +50,10 @@
    "source": [
     "import cv2\n",
     "import os\n",
-    "import fireducks.pandas as pd\n",
+    "# import fireducks.pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from google.colab import files"
+    "# from google.colab import files"
    ]
   },
   {
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1963,7 +1963,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessing complete. Images saved to: kolepreprocessed\n"
+      "Preprocessing complete. Images saved to: preprocessed/\n"
      ]
     }
    ],
@@ -2018,8 +2018,8 @@
     "    print(\"Preprocessing complete. Images saved to:\", output_folder)\n",
     "\n",
     "#  Step1: 1stchali images preprocessing\n",
-    "#  output_folder='1stchalipreprocessed'\n",
-    "#  input_folder='/content/areca-nut/arecanut/1stchali'\n",
+    "output_folder='preprocessed/'\n",
+    "input_folder='input/'\n",
     "\n",
     "#  Step2: Gotu images preprocessing\n",
     "#  output_folder='gotupreprocessed'\n",
@@ -2639,7 +2639,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
