image-preprocessing/areca_nut_image_preprocessing.ipynb

--- a/image-preprocessing/areca_nut_image_preprocessing.ipynb
+++ b/image-preprocessing/areca_nut_image_preprocessing.ipynb
@@ -2108,6 +2108,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rembg import remove\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "\n",
+    "def remove_background_from_folder(input_folder, output_folder):\n",
+    "    os.makedirs(output_folder, exist_ok=True)  \n",
+    "\n",
+    "    for filename in os.listdir(input_folder):\n",
+    "        if filename.endswith(('.jpg', '.jpeg', '.png')):  \n",
+    "            input_path = os.path.join(input_folder, filename)\n",
+    "            # Set output filename to have a .png extension\n",
+    "            output_filename = os.path.splitext(filename)[0] + '.png'\n",
+    "            output_path = os.path.join(output_folder, output_filename)  \n",
+    "\n",
+    "            try:\n",
+    "                # Open image\n",
+    "                input_img = Image.open(input_path)\n",
+    "                \n",
+    "                # Generate a unique temporary PNG path for each image\n",
+    "                temp_png_path = os.path.join(output_folder, f\"{os.path.splitext(filename)[0]}_temp.png\")\n",
+    "                \n",
+    "                # Convert the image to PNG format and save it temporarily\n",
+    "                input_img.save(temp_png_path, format='PNG')\n",
+    "\n",
+    "                # Open the saved temporary PNG image\n",
+    "                input_img = Image.open(temp_png_path)\n",
+    "                \n",
+    "                # Remove background using rembg\n",
+    "                output_img = remove(input_img)\n",
+    "                \n",
+    "                # Save the result to the output folder\n",
+    "                output_img.save(output_path)\n",
+    "                \n",
+    "                # Clean up temporary PNG file\n",
+    "                os.remove(temp_png_path)\n",
+    "                \n",
+    "                print(f\"Processed: {filename}\")  \n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing {filename}: {e}\")\n",
+    "\n",
+    "input_folder = '/content/areca-nut/arecanut/1stchali'  \n",
+    "output_folder = '/content/1stchalirembg'  \n",
+    "remove_background_from_folder(input_folder, output_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {
     "colab": {
