--- a/image-preprocessing/areca_nut_image_preprocessing.ipynb
+++ b/image-preprocessing/areca_nut_image_preprocessing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "lW6PIRfgFzbl"
    },
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1960,14 +1960,84 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preprocessing complete. Images saved to: preprocessed/\n"
+     "ename": "NotADirectoryError",
+     "evalue": "[WinError 267] The directory name is invalid: 'example-image.jpg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 119\u001b[0m\n\u001b[0;32m    109\u001b[0m input_folder\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexample-image.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;66;03m#  Step2: Gotu images preprocessing\u001b[39;00m\n\u001b[0;32m    112\u001b[0m \u001b[38;5;66;03m#  output_folder='gotupreprocessed'\u001b[39;00m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;66;03m#  input_folder='/content/areca-nut/arecanut/Gotu'\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    116\u001b[0m \u001b[38;5;66;03m#  output_folder='kolepreprocessed'\u001b[39;00m\n\u001b[0;32m    117\u001b[0m \u001b[38;5;66;03m#  input_folder='/content/areca-nut/arecanut/Kole'\u001b[39;00m\n\u001b[1;32m--> 119\u001b[0m \u001b[43mpreprocess_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43moutput_folder\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[17], line 70\u001b[0m, in \u001b[0;36mpreprocess_images\u001b[1;34m(input_folder, output_folder)\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpreprocess_images\u001b[39m(input_folder, output_folder):\n\u001b[0;32m     68\u001b[0m     os\u001b[38;5;241m.\u001b[39mmakedirs(output_folder, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_folder\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m     71\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith((\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.jpeg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m'\u001b[39m)):\n\u001b[0;32m     72\u001b[0m             input_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(input_folder, filename)\n",
+      "\u001b[1;31mNotADirectoryError\u001b[0m: [WinError 267] The directory name is invalid: 'example-image.jpg'"
      ]
     }
    ],
    "source": [
+    "# def preprocess_images(input_folder, output_folder):\n",
+    "\n",
+    "#     os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "#     for filename in os.listdir(input_folder):\n",
+    "#         if filename.endswith(('.jpg', '.jpeg', '.png')):\n",
+    "#             input_path = os.path.join(input_folder, filename)\n",
+    "#             output_path = os.path.join(output_folder, filename)\n",
+    "\n",
+    "#             img = cv2.imread(input_path)\n",
+    "\n",
+    "#             if img is None:\n",
+    "#                 print(f\"Skipping {filename}, unable to read the file.\")\n",
+    "#                 continue\n",
+    "\n",
+    "#             resized_img = cv2.resize(img, (2048, 2048))\n",
+    "\n",
+    "#             gray_img = cv2.cvtColor(resized_img, cv2.COLOR_BGR2GRAY)\n",
+    "#             blurred_img = cv2.GaussianBlur(gray_img, (5, 5), sigmaX=1.0, sigmaY=1.0)\n",
+    "            \n",
+    "#             clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8, 8))\n",
+    "#             clahe_img = clahe.apply(gray_img)\n",
+    "\n",
+    "#                                                                             # blurred_img = cv2.GaussianBlur(gray_img, (9, 9), 0)\n",
+    "\n",
+    "#                                                                             # source for sharpening images: https://medium.com/@sajjadhadi/mastering-opencv2-in-15-days-day-3-image-filtering-and-enhancement-ae1095f09aa5\n",
+    "\n",
+    "#             sharpening_kernel = np.array([[-1, -1, -1],\n",
+    "#                              [-1, 9, -1],\n",
+    "#                              [-1, -1, -1]])\n",
+    "#             sharpened_image = cv2.filter2D(clahe_img, -1, sharpening_kernel)\n",
+    "            \n",
+    "#             sobelx = cv2.Sobel(blurred_img, cv2.CV_64F, 1, 0, ksize=3)  # Gradient in X direction\n",
+    "#             sobely = cv2.Sobel(blurred_img, cv2.CV_64F, 0, 1, ksize=3)  # Gradient in Y direction\n",
+    "            \n",
+    "#             gradient_magnitude = np.hypot(sobelx, sobely)\n",
+    "#             gradient_magnitude = np.uint8(255 * gradient_magnitude / np.max(gradient_magnitude))\n",
+    "            \n",
+    "\n",
+    "#                                                                             # source for CLAHE (Contrast Limited Adaptive Histogram Equalization): https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html\n",
+    "\n",
+    "#             normalized_img = cv2.normalize(gradient_magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
+    "#             normalized_img = np.uint8(normalized_img)\n",
+    "\n",
+    "\n",
+    "#             cv2.imwrite(output_path, normalized_img)\n",
+    "\n",
+    "#     print(\"Preprocessing complete. Images saved to:\", output_folder)\n",
+    "\n",
+    "# #  Step1: 1stchali images preprocessing\n",
+    "# output_folder='preprocessed/'\n",
+    "# input_folder='input/'\n",
+    "\n",
+    "# #  Step2: Gotu images preprocessing\n",
+    "# #  output_folder='gotupreprocessed'\n",
+    "# #  input_folder='/content/areca-nut/arecanut/Gotu'\n",
+    "\n",
+    "# #  Step2: Gotu images preprocessing\n",
+    "# #  output_folder='kolepreprocessed'\n",
+    "# #  input_folder='/content/areca-nut/arecanut/Kole'\n",
+    "\n",
+    "# preprocess_images(input_folder,output_folder)\n",
+    "\n",
+    "\n",
+    "\n",
     "def preprocess_images(input_folder, output_folder):\n",
     "\n",
     "    os.makedirs(output_folder, exist_ok=True)\n",
@@ -1986,8 +2056,9 @@
     "            resized_img = cv2.resize(img, (2048, 2048))\n",
     "\n",
     "            gray_img = cv2.cvtColor(resized_img, cv2.COLOR_BGR2GRAY)\n",
-    "            blurred_img = cv2.GaussianBlur(gray_img, (5, 5), sigmaX=1.0, sigmaY=1.0)\n",
-    "            \n",
+    "\n",
+    "                                                                            # source for CLAHE (Contrast Limited Adaptive Histogram Equalization): https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html\n",
+    "\n",
     "            clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8, 8))\n",
     "            clahe_img = clahe.apply(gray_img)\n",
     "\n",
@@ -1999,17 +2070,8 @@
     "                             [-1, 9, -1],\n",
     "                             [-1, -1, -1]])\n",
     "            sharpened_image = cv2.filter2D(clahe_img, -1, sharpening_kernel)\n",
-    "            \n",
-    "            sobelx = cv2.Sobel(blurred_img, cv2.CV_64F, 1, 0, ksize=3)  # Gradient in X direction\n",
-    "            sobely = cv2.Sobel(blurred_img, cv2.CV_64F, 0, 1, ksize=3)  # Gradient in Y direction\n",
-    "            \n",
-    "            gradient_magnitude = np.hypot(sobelx, sobely)\n",
-    "            gradient_magnitude = np.uint8(255 * gradient_magnitude / np.max(gradient_magnitude))\n",
-    "            \n",
     "\n",
-    "                                                                            # source for CLAHE (Contrast Limited Adaptive Histogram Equalization): https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html\n",
-    "\n",
-    "            normalized_img = cv2.normalize(gradient_magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
+    "            normalized_img = cv2.normalize(sharpened_image, None, 0, 255, cv2.NORM_MINMAX)\n",
     "            normalized_img = np.uint8(normalized_img)\n",
     "\n",
     "\n",
@@ -2018,8 +2080,8 @@
     "    print(\"Preprocessing complete. Images saved to:\", output_folder)\n",
     "\n",
     "#  Step1: 1stchali images preprocessing\n",
-    "output_folder='preprocessed/'\n",
-    "input_folder='input/'\n",
+    "output_folder='preprocessed'\n",
+    "input_folder='example-image.jpg'\n",
     "\n",
     "#  Step2: Gotu images preprocessing\n",
     "#  output_folder='gotupreprocessed'\n",
@@ -2648,7 +2710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
