added function to convert images to df

--- a/img-to-df/df.ipynb
+++ b/img-to-df/df.ipynb
@@ -13,9 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame shape: (559, 16385)\n",
+      "DataFrame created and saved successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -49,7 +58,7 @@
     "    return df\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    folder_path = \"path/to/your/folder\"\n",
+    "    folder_path = \"E:/arecanut/preprocessed-1stchali\"\n",
     "\n",
     "    df = images_to_dataframe(folder_path)\n",
     "\n",
@@ -59,6 +68,13 @@
     "\n",
     "    print(\"DataFrame created and saved successfully!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
