--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43marecanut\u001b[49m\u001b[38;5;241m.\u001b[39minfo()\n",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43marecanut\u001b[49m\u001b[38;5;241m.\u001b[39minfo()\n",
       "\u001b[0;31mNameError\u001b[0m: name 'arecanut' is not defined"
      ]
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2020,9 +2020,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set size: 1265\n",
+      "Test set size: 317\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -2037,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2083,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of components explaining 99% variance: 580\n"
+      "Number of components explaining 95% variance: 318\n"
      ]
     }
    ],
@@ -2097,26 +2106,26 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "n_components_99 = next(i for i, total in enumerate(cumulative_variance) if total >= 0.99) + 1\n",
-    "print(f\"Number of components explaining 99% variance: {n_components_99}\")"
+    "n_components_95 = next(i for i, total in enumerate(cumulative_variance) if total >= 0.95) + 1\n",
+    "print(f\"Number of components explaining 95% variance: {n_components_95}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of X_train_pca: (1265, 580)\n",
-      "Shape of X_test_pca: (317, 580)\n"
+      "Shape of X_train_pca: (1265, 318)\n",
+      "Shape of X_test_pca: (317, 318)\n"
      ]
     }
    ],
    "source": [
-    "pca = PCA(n_components=n_components_99)\n",
+    "pca = PCA(n_components=n_components_95)\n",
     "\n",
     "x_train_pca = pca.fit_transform(x_train)\n",
     "\n",
@@ -2124,6 +2133,59 @@
     "\n",
     "print(f\"Shape of X_train_pca: {x_train_pca.shape}\")\n",
     "print(f\"Shape of X_test_pca: {x_test_pca.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.668769716088328\n",
+      "Confusion Matrix:\n",
+      "[[70 16 25]\n",
+      " [17 69  6]\n",
+      " [37  4 73]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.56      0.63      0.60       111\n",
+      "           2       0.78      0.75      0.76        92\n",
+      "           3       0.70      0.64      0.67       114\n",
+      "\n",
+      "    accuracy                           0.67       317\n",
+      "   macro avg       0.68      0.67      0.68       317\n",
+      "weighted avg       0.68      0.67      0.67       317\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "\n",
+    "# Initialize the Random Forest classifier\n",
+    "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Train the model\n",
+    "rf_classifier.fit(x_train_pca, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred_rf = rf_classifier.predict(x_test_pca)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy_rf = accuracy_score(y_test, y_pred_rf)\n",
+    "conf_matrix_rf = confusion_matrix(y_test, y_pred_rf)\n",
+    "class_report_rf = classification_report(y_test, y_pred_rf)\n",
+    "\n",
+    "print(f\"Random Forest Accuracy: {accuracy_rf}\")\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(conf_matrix_rf)\n",
+    "print(\"Classification Report:\")\n",
+    "print(class_report_rf)"
    ]
   },
   {
