--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
     "x= data.drop(columns=['grade'])\n",
     "y = data['grade']\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=1)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
     "\n",
     "print(f\"Training set size: {x_train.shape[0]}\")\n",
     "print(f\"Test set size: {x_test.shape[0]}\")"
@@ -2207,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2219,6 +2219,147 @@
     "\n",
     "x_train_scaled_df = pd.DataFrame(x_train_scaled, columns=x_train.columns)\n",
     "x_test_scaled_df = pd.DataFrame(x_test_scaled, columns=x_test.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1265, 16384)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train_scaled_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "316"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1265//4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bag 1 - x_train shape: (1265, 16384)\n",
+      "Bag 1 - x_test shape: (317, 16384)\n",
+      "Bag 1 - y_train shape: (1265,)\n",
+      "Bag 1 - y_test shape: (317,)\n",
+      "Bag 2 - x_train shape: (1265, 16384)\n",
+      "Bag 2 - x_test shape: (317, 16384)\n",
+      "Bag 2 - y_train shape: (1265,)\n",
+      "Bag 2 - y_test shape: (317,)\n",
+      "Bag 3 - x_train shape: (1265, 16384)\n",
+      "Bag 3 - x_test shape: (317, 16384)\n",
+      "Bag 3 - y_train shape: (1265,)\n",
+      "Bag 3 - y_test shape: (317,)\n",
+      "Bag 4 - x_train shape: (1265, 16384)\n",
+      "Bag 4 - x_test shape: (317, 16384)\n",
+      "Bag 4 - y_train shape: (1265,)\n",
+      "Bag 4 - y_test shape: (317,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arecanut = pd.read_csv(\"arecanut.csv\")\n",
+    "\n",
+    "def create_bagged_data(df, n_bags=4):\n",
+    "    bags = []\n",
+    "    for _ in range(n_bags):\n",
+    "        \n",
+    "        bag = df.sample(frac=1, replace=True, random_state=42)\n",
+    "        \n",
+    "        x = bag.drop(columns=['grade'])\n",
+    "        y = bag['grade']\n",
+    "        \n",
+    "        x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
+    "        \n",
+    "        scaler = StandardScaler()\n",
+    "        x_train_scaled = scaler.fit_transform(x_train)\n",
+    "        x_test_scaled = scaler.transform(x_test)\n",
+    "        \n",
+    "        bags.append({\n",
+    "            'x_train': x_train,\n",
+    "            'x_test': x_test,\n",
+    "            'y_train': y_train,\n",
+    "            'y_test': y_test,\n",
+    "            'x_train_scaled': x_train_scaled,\n",
+    "            'x_test_scaled': x_test_scaled\n",
+    "        })\n",
+    "    return bags\n",
+    "\n",
+    "bags = create_bagged_data(arecanut, n_bags=4)\n",
+    "\n",
+    "for i, bag in enumerate(bags):\n",
+    "    print(f\"Bag {i+1} - x_train shape: {bag['x_train'].shape}\")\n",
+    "    print(f\"Bag {i+1} - x_test shape: {bag['x_test'].shape}\")\n",
+    "    print(f\"Bag {i+1} - y_train shape: {bag['y_train'].shape}\")\n",
+    "    print(f\"Bag {i+1} - y_test shape: {bag['y_test'].shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bag 1 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 1 - Test Accuracy: 0.86\n",
+      "Bag 2 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 2 - Test Accuracy: 0.86\n",
+      "Bag 3 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 3 - Test Accuracy: 0.86\n",
+      "Bag 4 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 4 - Test Accuracy: 0.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "clf = DecisionTreeClassifier(random_state=42, min_samples_split=10, min_samples_leaf=1)\n",
+    "\n",
+    "for i, bag in enumerate(bags):\n",
+    "    scores = cross_val_score(clf, bag['x_train_scaled'], bag['y_train'], cv=5)\n",
+    "    print(f\"Bag {i+1} - Cross-Validation Accuracy: {scores.mean():.2f} (+/- {scores.std() * 2:.2f})\")\n",
+    "    \n",
+    "    clf.fit(bag['x_train_scaled'], bag['y_train'])\n",
+    "    y_pred = clf.predict(bag['x_test_scaled'])\n",
+    "    accuracy = accuracy_score(bag['y_test'], y_pred)\n",
+    "    print(f\"Bag {i+1} - Test Accuracy: {accuracy:.2f}\")"
    ]
   },
   {
