got accuracy of 0.86

--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "[30 rows x 16385 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2338,7 +2338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2368,7 +2368,7 @@
     "def create_bagged_data(df, n_bags=5):\n",
     "    bags = []\n",
     "    for _ in range(n_bags):\n",
-    "        bag = df.sample(frac=1, replace=True, random_state=1)\n",
+    "        bag = df.sample(frac=1, replace=True, random_state=42)\n",
     "        \n",
     "        x = bag.drop(columns=['grade'])\n",
     "        y = bag['grade']\n",
@@ -4446,27 +4446,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bag 1 - Cross-Validation Accuracy: 0.76 (+/- 0.05)\n",
-      "Bag 1 - Test Accuracy: 0.80\n",
-      "Bag 2 - Cross-Validation Accuracy: 0.76 (+/- 0.03)\n",
-      "Bag 2 - Test Accuracy: 0.76\n",
-      "Bag 3 - Cross-Validation Accuracy: 0.76 (+/- 0.08)\n",
-      "Bag 3 - Test Accuracy: 0.83\n",
-      "Bag 4 - Cross-Validation Accuracy: 0.77 (+/- 0.07)\n",
-      "Bag 4 - Test Accuracy: 0.79\n"
+      "Bag 1 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 1 - Test Accuracy: 0.86\n",
+      "Bag 1 - Confusion Matrix:\n",
+      "[[79  8 11]\n",
+      " [ 9 95  5]\n",
+      " [ 9  3 98]]\n",
+      "\n",
+      "Bag 2 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 2 - Test Accuracy: 0.86\n",
+      "Bag 2 - Confusion Matrix:\n",
+      "[[79  8 11]\n",
+      " [ 9 95  5]\n",
+      " [ 9  3 98]]\n",
+      "\n",
+      "Bag 3 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 3 - Test Accuracy: 0.86\n",
+      "Bag 3 - Confusion Matrix:\n",
+      "[[79  8 11]\n",
+      " [ 9 95  5]\n",
+      " [ 9  3 98]]\n",
+      "\n",
+      "Bag 4 - Cross-Validation Accuracy: 0.77 (+/- 0.03)\n",
+      "Bag 4 - Test Accuracy: 0.86\n",
+      "Bag 4 - Confusion Matrix:\n",
+      "[[79  8 11]\n",
+      " [ 9 95  5]\n",
+      " [ 9  3 98]]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "clf = DecisionTreeClassifier(random_state=42, min_samples_split=10, min_samples_leaf=1)\n",
     "\n",
@@ -4477,7 +4496,10 @@
     "    clf.fit(bag['x_train_scaled'], bag['y_train'])\n",
     "    y_pred = clf.predict(bag['x_test_scaled'])\n",
     "    accuracy = accuracy_score(bag['y_test'], y_pred)\n",
-    "    print(f\"Bag {i+1} - Test Accuracy: {accuracy:.2f}\")"
+    "    print(f\"Bag {i+1} - Test Accuracy: {accuracy:.2f}\")\n",
+    "    \n",
+    "    cm = confusion_matrix(bag['y_test'], y_pred)\n",
+    "    print(f\"Bag {i+1} - Confusion Matrix:\\n{cm}\\n\")"
    ]
   },
   {
